--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,3 +1,24 @@
-@import "fonts/fonts";
+// @import "fonts/fonts";
 @import "bootstrap/bootstrap";
-@import "components/components";
+@import "~bootstrap/scss/bootstrap";
+// @import "components/components";
+
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
+@import "header-login";
+@import "navbar";
+@import "icon";
+@import "featured-channel";
+@import "channel-view";
+
+@import "create-channel";
+@import "channel-info";
+@import "channel-home";
+@import "registration";
+@import "term-condition.scss";
+@import "featured-content";
+@import "user-registration";
+
+@import "test";
+@import "channel-view-test";
